# applycling

./: .cursorignore  .env.example  .env.hosted.template  .gitignore  .openclaw-system.md  .windsurfrules  AGENTS.md  ARCHITECTURE_VISION.md  CLAUDE.md  Caddyfile  DECISIONS.md  Dockerfile  Dockerfile.hermes  GEMINI.md  MEMORY_SYSTEM.md  OPERATIONAL_MANUAL.md  README.md  T2_IMPLEMENTATION_SUMMARY.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  test_prompt.py  vision.md
.agent/: MEMORY_SYSTEM.md  OPERATIONAL_MANUAL.md  README.md  generate.py  project.yaml
.agent/adapters/: _mk.py  antigravity.py  claude_code.py  codex.py  cursor.py  gemini_cli.py  hermes.py  openclaw.py  windsurf.py
.agent/memory-kit/: .gitignore  README.md  generate.py
.agent/templates/: architecture.md
.claude/: settings.json
.claude/agents/: spike-investigator.md  ticket-review-planner.md
.cursor/rules/: memory.mdc
.gemini/: context.md
TOREVIEW/: ANALYSIS.md  DB_TECH_DESIGN.md  EXTRACTION_PLAN.md  PERSONAL_USE_PLAN.md
apply_companion/: cli.py  llm.py  prompts.py  storage.py
applycling/: auth.py  cli.py  db_seed.py  forward_endpoint.py  import_existing.py  jobs_service.py  llm.py  mcp_server.py  notifiers.py  notion_connect.py  package.py  package_actions.py  pdf_import.py  pipeline.py  prompts.py  queue.py  render.py  resume_import.py  scraper.py  statuses.py  storage.py  telegram_notify.py  text_utils.py  user_admin.py
applycling/skills/: __init__.py  loader.py
applycling/tracker/: __init__.py  notion_store.py  postgres_store.py  sqlite_store.py
architecture/: MCP.md
hooks/: preprompt.txt  stop.sh
memory/: candidates.md  candidates.rejected.md  semantic.md  working.example.md  working.md
migrations/: env.py
scripts/: benchmark_vision.py  deploy.sh  setup_hermes_telegram.sh  setup_hosted_hermes.sh  setup_mcp.ps1  setup_mcp.sh
tests/: test_active_run_guard.py  test_agent_generate.py  test_applicant_profile.py  test_forward_endpoint.py  test_import_existing.py  test_jobs_service.py  test_mcp_server.py  test_onboarding_db.py  test_pipeline_contract.py  test_pipeline_library_api.py  test_placeholder_email_migration.py  test_postgres_store.py  test_regression_guard.py  test_resume_import.py  test_skills_loader.py  test_soul_no_secrets.py  test_statuses.py  test_telegram_notify.py  test_telegram_notify_contract.py  test_ui_routes.py  test_unified_profile.py  test_user_admin.py
(+86 files in other folders)
