[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "applycling"
version = "0.1.0"
description = "Your clingy job-search companion. Tailors your resume to job descriptions with a local Ollama LLM."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "ollama>=0.3.0",
    "rich>=13.7",
]

[project.scripts]
applycling = "applycling.cli:main"

[tool.setuptools.packages.find]
include = ["applycling*"]
