[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "applycling"
version = "0.1.0"
description = "Your clingy job-search companion. Tailors your resume to job descriptions with a local Ollama LLM."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "ollama>=0.3.0",
    "rich>=13.7",
    "notion-client>=2.2",
    "pypdf>=4.0",
    "markdown>=3.5",
    "playwright>=1.40",
    "tiktoken>=0.7",
    "python-docx>=1.1",
    "python-dotenv>=1.0",
    "anthropic>=0.90",
    "google-genai>=1.0",
    "questionary>=2.0",
    "openai>=1.0",
]

[project.scripts]
applycling = "applycling.cli:main"

[tool.setuptools.packages.find]
include = ["applycling*"]
