[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "applycling"
version = "0.1.0"
description = "Your clingy job-search companion. Tailors your resume, writes cover letters, and builds complete application packages. Supports Ollama, Anthropic, OpenAI, and Google AI Studio."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "ollama>=0.3.0",
    "rich>=13.7",
    "notion-client>=2.2",
    "pypdf>=4.0",
    "markdown>=3.5",
    "playwright>=1.40",
    "tiktoken>=0.7",
    "python-docx>=1.1",
    "python-dotenv>=1.0",
    "anthropic>=0.90",
    "google-genai>=1.0",
    "InquirerPy>=0.3",
    "openai>=1.0",
    "pyyaml>=6.0",
    "psycopg[binary]>=3.2",
    "alembic>=1.14",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "jinja2>=3.1",
    "python-multipart>=0.0.20",
]

[project.scripts]
applycling = "applycling.cli:main"

[tool.setuptools.packages.find]
include = ["applycling*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

